--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,37 @@
-# Esclude configurazioni IDE
-.idea/
+target/
+.mvn/
+!**/maven-wrapper.jar
+
+### IntelliJ IDEA ###
+.idea/modules.xml
+.idea/jarRepositories.xml
+.idea/compiler.xml
+.idea/libraries/
+*.iws
 *.iml
-*.class
+*.ipr
 
-# Esclude la cartella target di Maven
-/target/
+### Eclipse ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
 
-# Esclude file di log
-*.log
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### VS Code ###
+.vscode/
+
+### Mac OS ###
+.DS_Store
